# mind-search

./: Cargo.toml
src/: download_pages.rs  extract_firefox_history.rs  index_contents.rs  main.rs  search.rs
