[package]
name = "mind-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
ego-tree = "0.6.2"
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
rusqlite = "0.29.0"
scraper = "0.17.1"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
tantivy = "0.20.2"
zstd = "0.12.4"
